# CG-Assignment3

./: CMakeLists.txt  README.md  main.cpp  objloader.cpp  objloader.h  openglwindow.cpp  openglwindow.h  openglwindow.ui
